<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_title">Login</string>
    <string name="logout_text">Logout</string>
    <string name="login_sign_up_button">Sign Up</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_description">Shop with Us and Enjoy a new style!</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_show_list_button">Your Shoe List</string>
    <string name="login_image">Login Image - There are five people and one big box with a heart drawing in the right side of it. Each person is holding something. There is a woman on top of the box holding a large gray shoe.</string>
    <string name="welcome_image">Welcome Image - Four people in a row they are hug each other and in the top of them there is a balloon with the word welcome</string>
    <string name="instructions_text_about_list">In this App you can see your list of shoes with it type and image</string>
    <string name="instructions_text_about_add_shoe">You can click on the add button to add a new pair of shoes.</string>
    <string name="instructions_text_about_detail">You can click on an image to see the shoe\'s details as name, size, description, etc</string>
    <string name="shoe_list_title">Shoe List</string>
    <string name="shoe_detail_title">Shoe Detail</string>
    <string name="shoe_detail_name">Name</string>
    <string name="shoe_detail_name_hint">Shoe name</string>
    <string name="shoe_detail_company">Company</string>
    <string name="shoe_detail_company_hint">Shoe company</string>
    <string name="shoe_detail_size">Select your size</string>
    <string name="shoe_detail_description">Description</string>
    <string name="shoe_detail_description_hint">Shoe description</string>
    <string name="shoe_detail_size_hint">Shoe size</string>
    <string name="shoe_detail_save_button">Save</string>
    <string name="shoe_detail_cancel_button">Cancel</string>
    <string name="size_six">6</string>
    <string name="size_six_half">6.5</string>
    <string name="size_seven">7</string>
    <string name="size_seven_half">7.5</string>
    <string name="size_eight">8</string>
    <string name="size_nine">9</string>
    <string name="shoe_list_empty_text">You do not have any shoe in your list yet. Click on add button and detail your new shoe!</string>
</resources>
