<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameLabel"
            style="@style/TextsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:text="@string/shoe_detail_name"
            app:layout_constraintBottom_toBottomOf="@id/nameInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/nameInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/width_input_layout"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_32dp"
            app:helperText="Required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/companyLabel"
            style="@style/TextsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:text="@string/shoe_detail_company"
            app:layout_constraintBottom_toBottomOf="@id/companyInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/companyInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/width_input_layout"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_8dp"
            android:lines="1"
            app:helperText="Required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/descriptionLabel"
            style="@style/TextsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:text="@string/shoe_detail_description"
            app:layout_constraintBottom_toBottomOf="@id/descriptionInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/descriptionInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/width_input_layout"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_8dp"
            app:helperText="Required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sizeLabel"
            style="@style/TextsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:text="@string/shoe_detail_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/sizeInputLayout"
            app:layout_constraintTop_toTopOf="@id/sizeInputLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sizeInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/width_input_layout"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_8dp"
            app:helperText="Required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sizeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/saveButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginBottom="@dimen/spacing_16"
            android:text="@string/shoe_detail_save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_16"
            android:layout_marginBottom="@dimen/spacing_16"
            android:text="@string/shoe_detail_cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
